Make minor production related modifications
Made a bunch of minor changes, mostly in naming related, to make
deployment more "production friendly".

--- a/etc/handoff.conf
+++ b/etc/handoff.conf
@@ -1,8 +1,8 @@
 # Version of the LSST stack to use.
-export STACK_VER=d_latest
+export STACK_VER=7-stack-lsst_distrib-d_2020_02_20
 
 # Version of the DBB buffer manager to use.
-export MANAGER_VER=tickets/DM-22964
+export MANAGER_VER=1.0.0-rc1
 
 # Label which will be applied to the resultant Docker image. 
 export IMAGE_TAG=1.0.0-rc1
