Streamline deployment with docker-compose
Deploying DBB handoff managers for both Auxtel and Comcam using current
approach was a bit tedious and error prone. Firstly, the  configuration
file was a part of the docker image.  Thus the image needs rebuilding,
twice, when any configuration change occurred.  Secondly, the scripts
were coupled in subtle and obfuscated ways (e.g. changing a log name in
one required manual updates in others).  To address these issues I made
following changes:
    * The configuration file is no longer a part of an image. Now it is
      bind mounted to it.
    * Replaced custom scripts with a single docker-compose file which
      controls practically aspects of the deployment.

--- a/docker/dbb_buffmngrs_handoff/Dockerfile
+++ b/docker/dbb_buffmngrs_handoff/Dockerfile
@@ -1,5 +1,5 @@
-ARG STACK_VER
-FROM lsstsqre/centos:$STACK_VER
+ARG LSST_VER
+FROM lsstsqre/centos:$LSST_VER
 LABEL name="DBB handoff buffer manager" \
     vendor="LSST" \
     license="GPLv3"
@@ -7,30 +7,27 @@ LABEL name="DBB handoff buffer manager" \
 USER root
 
 # Install buffer manager and its dependencies.
-ARG MANAGER_VER
+ARG MNGR_VER
 WORKDIR /opt/lsst/addons
 RUN source /opt/lsst/software/stack/loadLSST.bash \
     && conda install --yes jsonschema \
     && git clone https://github.com/lsst-dm/dbb_buffmngrs_handoff.git \
     && cd dbb_buffmngrs_handoff \
-    && git checkout $MANAGER_VER \
+    && git checkout $MNGR_VER \
     && setup -r . \
     && scons
 
 # Create a non-privileged user account.
-ARG GID
-ARG UID
-RUN groupadd -g $GID buffmngr \
-    && useradd -g $GID -m -s /bin/bash -u $UID buffmngr
+ARG GRP_ID
+ARG USR_ID
+RUN groupadd -g $GRP_ID mngr \
+    && useradd -g $GRP_ID -m -s /bin/bash -u $USR_ID mngr
 
-WORKDIR /home/buffmngr
-COPY run_buffmngr.sh .
-COPY buffmngr.yml .
-RUN chown buffmngr:buffmngr run_buffmngr.sh \
-    && chmod a+x run_buffmngr.sh \
-    && chown buffmngr:buffmngr buffmngr.yml \
-    && chmod a+r buffmngr.yml
+WORKDIR /home/mngr
+COPY run_mngr.sh .
+RUN chown mngr:mngr run_mngr.sh \
+    && chmod a+x run_mngr.sh
 
-USER buffmngr
-ENTRYPOINT ["/home/buffmngr/run_buffmngr.sh"]
-CMD ["/home/buffmngr/buffmngr.yml"]
+USER mngr
+ENTRYPOINT ["./run_mngr.sh"]
+CMD ["-h"]
