--- a/handoff/etc/cc_dbbbm_config.yaml
+++ b/handoff/etc/cc_dbbbm_config.yaml
@@ -2,12 +2,10 @@ handoff:
   buffer: /data/buffer
   holding: /data/holding
 endpoint:
-  user: mxk
-  host: lsst-dev03.ncsa.illinois.edu
-  buffer: /home/mxk/jhome/lsstdata/offline/badfiles/comcam/buffer
-  staging: /home/mxk/jhome/lsstdata/offline/badfiles/comcam/staging
-  storage: /home/mxk/jhome/lsstdata/offline/badfiles/comcam/storage
+  user: jdoe
+  host: endpoint.host.edu
+  buffer: /data/cc/buffer
+  staging: /data/cc/staging
+  storage: /data/cc/storage
 logging:
   file: /var/log/cc_handoff.log
-general:
-   expiration_time: 600
