Update user's UID/GID on container startup
The handoff manager in the Docker container must be run by a user having
read/write access to the buffer and the storage area.  In previous
approach, UID/GID of that user was being persisted in the image itself.
As a result Docker image with the manager built on one machine could not
be used on other.  To address this limitation I rewrote Docker
configuration files to allow for dynamic updating of user's UID/GID
during container startup.

--- a/handoff/docker-compose.yaml
+++ b/handoff/docker-compose.yaml
@@ -3,6 +3,9 @@ services:
   at-dbbbm:
     image: lsst/dbbbm:${TAG}
     command: ["./local/etc/at_dbbbm_config.yaml"]
+    environment:
+      - GRP_ID
+      - USR_ID
     volumes:
       - type: bind
         source: /data
@@ -12,17 +15,19 @@ services:
         target: /var/log
       - type: bind
         source: ./etc
-        target: ${TGT_HOME}/local/etc
+        target: /home/mgr/local/etc
       - type: bind
-        source: ${SRC_HOME}/.ssh
-        target: ${TGT_HOME}/.ssh
+        source: ${HOME}/.ssh
+        target: /tmp/.ssh
         read_only: true
-    user: ${USR_ID}:${GRP_ID}
     depends_on:
       - dbbbm
   cc-dbbbm:
     image: lsst/dbbbm:${TAG}
     command: ["./local/etc/cc_dbbbm_config.yaml"]
+    environment:
+      - GRP_ID
+      - USR_ID
     volumes:
       - type: bind
         source: /data
@@ -32,10 +37,10 @@ services:
         target: /var/log
       - type: bind
         source: ./etc
-        target: ${TGT_HOME}/local/etc
+        target: /home/mgr/local/etc
       - type: bind
-        source: ${SRC_HOME}/.ssh
-        target: ${TGT_HOME}/.ssh
+        source: ${HOME}/.ssh
+        target: /tmp/.ssh
         read_only: true
     user: ${USR_ID}:${GRP_ID}
     depends_on:
@@ -47,6 +52,4 @@ services:
       args:
         - LSST_VER
         - MNGR_VER
-        - GRP_ID
-        - USR_ID
       network: host
