--- a/handoff/dbbbm/Dockerfile
+++ b/handoff/dbbbm/Dockerfile
@@ -6,6 +6,14 @@ LABEL name="DBB handoff buffer manager" \
 
 USER root
 
+# Create a non-privileged user account.
+RUN groupadd mgr \
+    && useradd -g mgr -m -s /bin/bash mgr
+
+# Copy the init script.
+COPY docker-entrypoint.sh /bin/docker-entrypoint.sh
+RUN chmod +x /bin/docker-entrypoint.sh
+
 # Install buffer manager and its dependencies.
 ARG MNGR_VER
 WORKDIR /opt/lsst/addons
@@ -17,17 +25,10 @@ RUN source /opt/lsst/software/stack/loadLSST.bash \
     && setup -r . \
     && scons
 
-# Create a non-privileged user account.
-ARG GRP_ID
-ARG USR_ID
-RUN groupadd -g $GRP_ID mgr \
-    && useradd -g $GRP_ID -m -s /bin/bash -u $USR_ID mgr
-
+# Copy service startup script.
 WORKDIR /home/mgr
 COPY run_dbbbm.sh .
-RUN chown mgr:mgr run_dbbbm.sh \
-    && chmod a+x run_dbbbm.sh
+RUN chmod +x run_dbbbm.sh
 
-USER mgr
-ENTRYPOINT ["./run_dbbbm.sh"]
+ENTRYPOINT ["/bin/docker-entrypoint.sh"]
 CMD ["-h"]
