Change Docker image name in docker-compose.yaml
Docker image with the buffer manager is now available on DockerHub.
Changed image name slighlty to make pushing to and pulling from there
possible as it is kept in a repository belonging to LSST organization
called 'lsstts'.

--- a/handoff/docker-compose.yaml
+++ b/handoff/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.6"
 services:
   at-dbbbm:
-    image: lsst/dbbbm:${TAG}
+    image: lsstts/dbbbm:${TAG}
     command: ["./local/etc/at_dbbbm_config.yaml"]
     environment:
       - GRP_ID
@@ -23,7 +23,7 @@ services:
     depends_on:
       - dbbbm
   cc-dbbbm:
-    image: lsst/dbbbm:${TAG}
+    image: lsstts/dbbbm:${TAG}
     command: ["./local/etc/cc_dbbbm_config.yaml"]
     environment:
       - GRP_ID
@@ -46,7 +46,7 @@ services:
     depends_on:
       - dbbbm
   dbbbm:
-    image: lsst/dbbbm:${TAG}
+    image: lsstts/dbbbm:${TAG}
     build:
       context: ./dbbbm
       args:
