Enable using bbcp
Starting from version 1.2, DBB handoff buffer manager allows a user to
specify the command which will be used to transfer files between the
handoff and endpoint sites different from scp (e.g. bbcp).  However,
bbcp is not included in CentOS package repositories.  Hence, I added it
source and modified the Dockerfile to make it compile, build, and
install it in the Docker image.  I also updated provided example
configuration file to make it reflect new syntax.

--- a/handoff/dbbbm/Dockerfile
+++ b/handoff/dbbbm/Dockerfile
@@ -1,18 +1,30 @@
 ARG LSST_VER
+FROM lsstsqre/centos:$LSST_VER AS build
+USER root
+
+# Compile and install bbcp.
+RUN yum --assumeyes install gcc-c++ make openssl-devel zlib-devel
+
+ARG BBCP_VER
+RUN mkdir /builds
+COPY bbcp-${BBCP_VER}.tar.gz /builds
+RUN cd /builds \
+    && tar xzf bbcp-${BBCP_VER}.tar.gz \
+    && cd bbcp/src \
+    && make
+
+ARG LSST_VER
 FROM lsstsqre/centos:$LSST_VER
 LABEL name="DBB handoff buffer manager" \
     vendor="LSST" \
     license="GPLv3"
-
 USER root
+
+COPY --from=build /builds/bbcp/bin/amd64_linux31/bbcp /usr/bin
 
 # Create a non-privileged user account.
 RUN groupadd mgr \
     && useradd -g mgr -m -s /bin/bash mgr
-
-# Copy the init script.
-COPY docker-entrypoint.sh /bin/docker-entrypoint.sh
-RUN chmod +x /bin/docker-entrypoint.sh
 
 # Install buffer manager and its dependencies.
 ARG MNGR_VER
@@ -24,6 +36,7 @@ RUN source /opt/lsst/software/stack/loadLSST.bash \
     && git checkout $MNGR_VER \
     && setup -r . \
     && scons
+
 
 # Copy service startup script.
 WORKDIR /home/mgr
