--- a/handoff/dbbbm/Dockerfile
+++ b/handoff/dbbbm/Dockerfile
@@ -1,10 +1,26 @@
 ARG LSST_VER
+FROM lsstsqre/centos:$LSST_VER AS build
+USER root
+
+# Compile and install bbcp.
+RUN yum --assumeyes install gcc-c++ make openssl-devel zlib-devel
+
+ARG BBCP_VER
+RUN mkdir /builds
+COPY bbcp-${BBCP_VER}.tar.gz /builds
+RUN cd /builds \
+    && tar xzf bbcp-${BBCP_VER}.tar.gz \
+    && cd bbcp/src \
+    && make
+
+ARG LSST_VER
 FROM lsstsqre/centos:$LSST_VER
 LABEL name="DBB handoff buffer manager" \
     vendor="LSST" \
     license="GPLv3"
-
 USER root
+
+COPY --from=build /builds/bbcp/bin/amd64_linux31/bbcp /usr/bin
 
 # Create a non-privileged user account.
 RUN groupadd mgr \
@@ -32,3 +48,4 @@ RUN chmod +x run_dbbbm.sh
 
 ENTRYPOINT ["/bin/docker-entrypoint.sh"]
 CMD ["-h"]
+
