Bring deployment scripts up to date
The new version of the handoff buffer manager, 1.3, brings two major
changes. Firstly, it now stores information about transfer attempt it
made in an SQLite database.  Secondly, new command line interface
similar to one being used by the endpoint manager.  I modified the
deployment scripts to reflect theses changes, i.e., added additional
bind mount for the database in docker-compose.yaml and modified the
startup script to use new CLI.

--- a/handoff/docker-compose.yaml
+++ b/handoff/docker-compose.yaml
@@ -19,11 +19,14 @@ services:
         source: /data
         target: /data
       - type: bind
-        source: /var/log
-        target: /var/log
-      - type: bind
-        source: ./etc
+        source: ${HOME}/local/etc
         target: /home/mgr/local/etc
+      - type: bind
+        source: ${HOME}/local/var/lib/sqlite/data
+        target: /var/lib/sqlite/data
+      - type: bind
+        source: ${HOME}/local/var/log
+        target: /var/log/dbbbm
       - type: bind
         source: ${HOME}/.ssh
         target: /tmp/.ssh
@@ -47,11 +50,14 @@ services:
         source: /data
         target: /data
       - type: bind
-        source: /var/log
-        target: /var/log
-      - type: bind
-        source: ./etc
+        source: ${HOME}/local/etc
         target: /home/mgr/local/etc
+      - type: bind
+        source: ${HOME}/local/var/lib/sqlite/data
+        target: /var/lib/sqlite/data
+      - type: bind
+        source: ${HOME}/local/var/log/
+        target: /var/log/dbbbm
       - type: bind
         source: ${HOME}/.ssh
         target: /tmp/.ssh
