--- a/handoff/etc/cc_dbbbm_config.yaml
+++ b/handoff/etc/cc_dbbbm_config.yaml
@@ -1,3 +1,5 @@
+database:                                                                       
+  engine: sqlite:////var/lib/sqlite/data/comcam.db
 handoff:
   buffer: /data/buffer
   holding: /data/holding
@@ -8,6 +10,6 @@ endpoint:
   staging: /data/cc/staging
   commands:
     remote: "ssh -l {user} {host} \"{command}\""
-    transfer: "bbcp -T \"ssh -a -x -oFallBackToRsh=no %4 %I -l %U %H /home/lsstdbot/bin/bbcp\" -Z 56000:57000 {batch} {user}@{host}:{dest}"
+    transfer: "bbcp -T \"ssh -a -x -oFallBackToRsh=no %4 %I -l %U %H /home/lsstdbot/bin/bbcp\" -Z 56000:57000 -s 4 {batch} {user}@{host}:{dest}"
 logging:
   file: /var/log/cc_handoff.log
